--- a/src/app/tech-article/tech-article.component.html
+++ b/src/app/tech-article/tech-article.component.html
@@ -27,7 +27,7 @@
   <div class="col-12">
     <h2 class="text-center">All Tech Articles</h2>
   </div>
-  <button *ngIf="!checkLoginStatus()" type="button" class="buttonarticle" data-toggle="modal"
+  <button *ngIf="!checkLoginStatus()" type="button" class="buttonarticle crt-btn" data-toggle="modal"
     data-target="#createTechArticleModal">Create Tech
     Article</button>
   <br />
@@ -61,7 +61,7 @@
 
   </div>
   <div class="col-md-6">
-    <div class="row" style="font-size: 1rem;">
+    <div class="row m-row" style="font-size: 1rem;">
       <div class="col-4">
         <p (click)="selectKeyword()"> <span class="radio-btns">&nbsp;</span><span class="white-radio">&nbsp;</span><i
             class="fa fa-check" *ngIf="showKeyword"></i> Keyword</p>
@@ -109,21 +109,45 @@
       <div class="card card-articles" style="width: 100%;"
         *ngFor="let techarticle of techarticledetails | filterBy:techArticleFilter ; let i = index; "
         [ngClass]="{'techarticleRow1' : i%2==0 }">
+
         <div class="card-body">
-          <h5 class="card-title" style="color:#33099e;"><span class="title-name">Author:
-            </span><b>{{techarticle.name}}</b>
-            &nbsp;<span style="font-size: 0.85rem;color:red;"> ( {{techarticle.followerCount}} followers )</span>
-          </h5>
+
+
+
+          
 
           <div class="row">
-            <div class="col-md-3">
-              <div style="margin-left:0.5em;">
+              <div class="col-md-6 tec_lft">
+                  <b>Title</b> : {{techarticle.articletitle}}
+                  <br />
+                  <b>Technology</b> : {{techarticle.technologyname}}
+                  <br />
+                  <b>Sub-Technology</b> : {{techarticle.subtechname}}
+                  <br />
+                  <b *ngIf="techarticle.articletype=='Article'">Price :
+                    <span style="color:#255B88">{{techarticle.cost}} rs</span>
+                  </b>
+                  <div>
+                      <span class="abstract-name">Abstract</span> : {{techarticle.abstract}}
+                    </div>
+                </div>
+
+
+            <div class="col-md-3 tec_mdl">
+                <h5 class="card-title" style="color:#33099e;"><span class="title-name">
+                  </span><b>{{techarticle.name}}</b>
+                  <br/>
+                <span style="font-size: 0.85rem;color:rgb(22, 22, 22);"> ( {{techarticle.followerCount}} followers )</span>
+                </h5>
+              <div class="">
                 <img class="profilepicture" *ngIf="techarticle.profilepicture!==''"
-                  src="../assets/images/profileImages/{{techarticle.profilepicture}}" alt="Card image cap">
+                  src="../assets/images/profileImages/{{techarticle.profilepicture}}" alt="Profile Pic">
                 <img class="profilepicture" *ngIf="techarticle.profilepicture==''" src="../assets/images/user-dummy.png"
-                  alt="Card image cap">
+                  alt="Profile Pic">
+                  <br/>
+                  <div class="lke-dis">
                 <button *ngIf="!checkLoginStatus()" class="btn btn-light"
-                  style="background-color: green; height: 2.5em; color: white;margin-left: 25px;"
+                  style="background-color: green; height: 2.5em; color: white;"
                   (click)="articleUpDownCountUpdate(techarticle.articleid,'UP')">
                   {{techarticle.upCount}}
                   <img src="../assets/images/thumbsUp.png" alt="Card image cap" style="height:15px;">
@@ -135,25 +159,14 @@
                   {{techarticle.downCount}}
                   <img src="../assets/images/thumbsDown.png" alt="Card image cap" style="height: 15px;">
                 </button>
-
+              </div>
                 <br />
               </div>
             </div>
-            <div class="col-md-3">
-              <b>Title</b> : {{techarticle.articletitle}}
-              <br />
-              <b>Technology</b> : {{techarticle.technologyname}}
-              <br />
-              <b>Sub-Technology</b> : {{techarticle.subtechname}}
-              <br />
-              <b *ngIf="techarticle.articletype=='Article'">Price :
-                <span style="color:#255B88">{{techarticle.cost}} rs</span>
-              </b>
-            </div>
-            <div class="col-md-6">
+            
+            <div class="col-md-3 tec_ryt">
 
-
-              <ul *ngIf="!checkLoginStatus()" class="nav nav-pills" style="float:right;">
+              <ul *ngIf="!checkLoginStatus()" class="nav nav-pills" style="">
 
                 <li class="nav-item ">
                   <button class="nav-link btn btn-light buybutton buttonarticle"
@@ -191,12 +204,7 @@
             </div>
 
           </div>
-          <div class="row">
-            <div class="col-md-12">
-
-              <span class="abstract-name">Abstract</span> : {{techarticle.abstract}}
-            </div>
-          </div>
+        
 
 
           <br />
