--- a/src/app/tech-bank/tech-bank.component.html
+++ b/src/app/tech-bank/tech-bank.component.html
@@ -25,7 +25,7 @@
 </div> -->
 <div class="row tech-bank-filters" style="background-color: #F4F6F5; height: 4em; ">
   <div class="col-12 text1">
-    <h2 class="text-center">Tech Connect Programmes</h2>
+    <h2 class="text-center tch-m-hdng">Tech Connect Programmes</h2>
   </div>
   <button *ngIf="!checkLoginStatus()" type="button" data-toggle="modal" class="buttonarticle"
     data-target="#createTechConnectModal">Create
@@ -77,10 +77,10 @@
 </div>
 
 <br />
-<div class="container-fluid">
+<div class="container-fluid" style="padding: 2px;">
   <div class="row">
     <div class="col-12">
-      <div class="accordion" id="accordionExample" style="margin: 1em; ">
+      <div class="accordion" id="accordionExample" style="margin: 0em; ">
         <div class="card" *ngFor="let techteach of techteachdetails | filterBy:techEventFilter ; let i = index; ">
           <div class="card-header" id="teachheading{{1}}" data-toggle="" attr.data-target="#teachcollapse{{i}}"
             aria-expanded="" attr.aria-controls="teachcollapse{{i}}">
@@ -96,7 +96,7 @@
 
           <div id="teachcollapse{{i}}" [ngClass]="{'show' : i==0}" class="" attr.aria-labelledby="teachheading{{i}}"
             data-parent="#accordionExample">
-            <div class="card-body">
+            <div class="card-body ">
               <div class="col-12">
                 <div><b class="crd-lft">Created on</b> <span class="crd-ryt">: {{techteach.createdon}}</span></div>
                 <div><b class="crd-lft">Event on</b> <span class="crd-ryt">: {{techteach.venuedate}}</span></div>
